@startuml

title Domain Model - US1010

hide empty members
'skinparam Linetype ortho

skinparam class {
    BackgroundColor<<valueObject>> #D6EAF8
    BackgroundColor<<root>> #FDEBD0
    BackgroundColor<<service>> #D1F2EB
    BackgroundColor #FEF9E7
    ArrowColor Black
}

skinparam package {
    BackgroundColor #EBF5FB
}

' RecruitmentProcess Aggregate
package "<<aggregate>> RecruitmentProcess" {
    entity RecruitmentProcess <<entity>> <<root>> {}
    entity Phase <<entity>> {}
    entity ApplicationPhase <<entity>> {}
    entity ScreeningPhase <<entity>> {}
    entity InterviewPhase <<entity>> {}
    entity AnalysisPhase <<entity>> {}
    entity ResultPhase <<entity>> {}
    
    class InitialDate <<valueObject>> <<(V, #FF8B40)>> {}
    class FinalDate <<valueObject>> <<(V, #FF8B40)>> {}
    class State <<valueObject>> <<(V, #FF8B40)>> {}

    note right of State: State can be Opened or Closed
}

class CompanyName <<valueObject>> <<(V, #FF8B40)>> {}

' Job Opening Aggregate
package "<<aggregate>> Job Opening" {
    entity JobOpening <<entity>> <<root>> {}

    class JobReference <<valueObject>> <<(V, #FF8B40)>> {}
    class TitleOrFunction <<valueObject>> <<(V, #FF8B40)>> {}
    class ContractType <<valueObject>> <<(V, #FF8B40)>> {}
    class Mode <<valueObject>> <<(V, #FF8B40)>> {}
    class NumberOfVacancies <<valueObject>> <<(V, #FF8B40)>> {}
    class JobDescription <<valueObject>> <<(V, #FF8B40)>> {}
    entity RequirementSpecification <<entity>> {}
}

class Address <<valueObject>> <<(V, #FF8B40)>> {}

' Job Opening relationships
JobOpening "1" --> "1" JobReference : has
JobOpening "1" --> "1" TitleOrFunction : has
JobOpening "1" --> "1" ContractType : has
JobOpening "1" --> "1" Mode : has
JobOpening "1" --> "1" Address : has
JobOpening "1" --> "1" CompanyName : has
JobOpening "1" --> "1" NumberOfVacancies : has
JobOpening "1" --> "1" JobDescription : has
JobOpening "1" --> "1" RequirementSpecification: has

' Recruitment Process relationships
RecruitmentProcess "1" --> "*" Phase : has
RecruitmentProcess "1" --> "1" JobOpening : for

' Phase relationships
Phase "1" --> "1" State: has
Phase "1" --> "1" InitialDate: has
Phase "1" --> "1" FinalDate: has
ApplicationPhase -up-|> Phase: is a
ScreeningPhase -up-|> Phase: is a
InterviewPhase -up-|> Phase: is a
AnalysisPhase -up-|> Phase: is a
ResultPhase -up-|> Phase: is a


@enduml